[package]
name = "layered-io"
version = "0.23.1"
description = "I/O traits extending Read and Write"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["api", "io", "stream"]
categories = ["os", "rust-patterns"]
repository = "https://github.com/sunfishcode/layered-io"
exclude = ["/.github"]

[dependencies]
duplex = "0.16.0"
io-extras = { version = "0.18.0", features = ["os_pipe"] }
terminal-io = { version = "0.19.0", optional = true }
futures-io = { version = "0.3.12", optional = true }
tokio = { version = "1.8.1", optional = true }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(bench)',
    'cfg(read_initializer)',
    'cfg(can_vector)',
    'cfg(clamp)',
    'cfg(extend_one)',
    'cfg(pattern)',
    'cfg(seek_stream_len)',
    'cfg(shrink_to)',
    'cfg(toowned_clone_into)',
    'cfg(try_reserve)',
    'cfg(unix_socket_peek)',
    'cfg(windows_by_handle)',
    'cfg(write_all_vectored)',
    'cfg(windows_file_type_ext)',
]
